--- a/rmarkd_ex1.html
+++ b/rmarkd_ex1.html
@@ -70,9 +70,7 @@ h6 {
 </style>
 
 
-</head>
 
-<body>
 
 <style type="text/css">
 .main-container {
@@ -91,25 +89,98 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
+}
+summary {
+  display: list-item;
 }
 </style>
 
 
 
-<div class="container-fluid main-container">
-
 <!-- tabsets -->
+
+<style type="text/css">
+.tabset-dropdown > .nav-tabs {
+  display: inline-table;
+  max-height: 500px;
+  min-height: 44px;
+  overflow-y: auto;
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.tabset-dropdown > .nav-tabs > li.active:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
+  content: "";
+  border: none;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
+}
+
+.tabset-dropdown > .nav-tabs > li.active {
+  display: block;
+}
+
+.tabset-dropdown > .nav-tabs > li > a,
+.tabset-dropdown > .nav-tabs > li > a:focus,
+.tabset-dropdown > .nav-tabs > li > a:hover {
+  border: none;
+  display: inline-block;
+  border-radius: 4px;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open > li {
+  display: block;
+  float: none;
+}
+
+.tabset-dropdown > .nav-tabs > li {
+  display: none;
+}
+</style>
+
 <script>
 $(document).ready(function () {
   window.buildTabsets("TOC");
+});
+
+$(document).ready(function () {
+  $('.tabset-dropdown > .nav-tabs > li').click(function () {
+    $(this).parent().toggleClass('nav-tabs-open')
+  });
 });
 </script>
 
 <!-- code folding -->
 
 
+
+
+</head>
+
+<body>
+
+
+<div class="container-fluid main-container">
 
 
 
@@ -119,16 +190,19 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Using the Meetup API</h1>
-<h4 class="author"><em>Andy Roy</em></h4>
-<h4 class="date"><em>4/3/2019</em></h4>
+<h4 class="author">Andy Roy</h4>
+<h4 class="date">4/3/2019</h4>
 
 </div>
 
 
 <div id="example---getmembers" class="section level2">
 <h2>Example - GetMembers</h2>
-<pre class="r"><code>df &lt;- meetup.GetMembers(&quot;Schaumburg-R-Consultants-Meetup&quot;)
-df[,1:3]</code></pre>
+<pre class="r"><code>source(&quot;meetups.R&quot;)
+
+df &lt;- meetup.GetMembers(&quot;Schaumburg-R-Consultants-Meetup&quot;)</code></pre>
+<pre><code>## count:19</code></pre>
+<pre class="r"><code>df[,1:3]</code></pre>
 <pre><code>##                   name        id            city
 ## 1        Aadish Chopra 223644803         Chicago
 ## 2             Andy Roy 122302012      Schaumburg
